--- a/body positivity website/mission.css
+++ b/body positivity website/mission.css
@@ -2,19 +2,6 @@ body{
   background-color: #c5b5e1 !important;
 }
 
-.container {
-  display: block;
-  margin: auto;
-  width: 40%;
-}
-.left {
-  float: left;
-  right: 100%;
-	top: 50%;
-	height: 0;
-	width: 0;
-	position: fixed;
-}
 .right {
   float: right;
   left: 100%;
@@ -24,6 +11,14 @@ body{
   position: fixed;
 	margin-left: -26.8px;
 }
+.left {
+  float: left;
+  right: 100%;
+	top: 50%;
+	height: 0;
+	width: 0;
+	position: fixed;
+}
 
 h1, p{
   color: #fff4fd !important;
@@ -31,17 +26,12 @@ h1, p{
 
 h1 {
   font-family: 'Leckerli One', cursive !important;
-  font-size: 100px !important;
+  font-size: 100px;
   text-align: center;
+  margin: 50px
 }
 
-p {
+p{
   font-family: 'Hind', sans-serif !important;
   font-size: 18px;
-}
-
-img {
-  display: block;
-  margin: auto;
-  width: 40%
 }
