--- a/slide9.css
+++ b/slide9.css
@@ -35,3 +35,44 @@ p{
   font-family: 'Hind', sans-serif
   font-size: 18px;
 }
+
+@media screen and (max-device-width: 480px){
+  body{
+    background-color: #c5b5e1 !important;
+    padding: 5px;
+  }
+  .right {
+    float: right;
+    left: 100%;
+    top: 50%;
+    height: 0;
+    width: 0;
+    position: fixed;
+  	margin-left: -26.8px;
+  }
+  .left {
+    float: left;
+    right: 100%;
+  	top: 50%;
+  	height: 0;
+  	width: 0;
+  	position: fixed;
+  }
+
+  h1, p{
+    color: #fff4fd !important;
+  }
+
+  h1{
+    font-family: 'Leckerli One', cursive;
+    font-size: 200px;
+    text-align: center;
+    margin: 50px ;
+  }
+
+  p{
+    font-family: 'Hind', sans-serif
+    font-size: 18px;
+  }
+
+}
