--- a/slide9.css
+++ b/slide9.css
@@ -26,13 +26,17 @@ h1, p{
 
 h1{
   font-family: 'Leckerli One', cursive;
-  font-size: 100px;
-  text-align: center;
-  margin: 50px ;
+  font-size: 200px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 p{
-  font-family: 'Hind', sans-serif
+  font-family: 'Hind', sans-serif;
   font-size: 18px;
 }
 
@@ -65,14 +69,18 @@ p{
 
   h1{
     font-family: 'Leckerli One', cursive;
-    font-size: 200px;
-    text-align: center;
-    margin: 50px ;
+    font-size: 150px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
 
   p{
-    font-family: 'Hind', sans-serif
-    font-size: 18px;
+    font-family: 'Hind', sans-serif;
+    font-size: 100px;
   }
 
 }
