--- a/slide2.css
+++ b/slide2.css
@@ -1,19 +1,18 @@
 body{
   background-color: #c5b5e1 !important;
 }
-
 .right {
   float: right;
-  left: 100%;
+  left: 80%;
   top: 50%;
   height: 0;
   width: 0;
   position: fixed;
-	margin-left: -26.8px;
+  margin-left: -26.8px;
 }
 .left {
   float: left;
-  right: 100%;
+  right: 80%;
 	top: 50%;
 	height: 0;
 	width: 0;
@@ -26,12 +25,26 @@ h1, p{
 
 h1 {
   font-family: 'Leckerli One', cursive !important;
-  font-size: 100px;
+  font-size: 100px !important;
   text-align: center;
-  margin: 50px
+  margin: 50px;
+  margin-top: 40px;
+}
+
+#heading {
+  margin-bottom: 20%;
+  margin-top: 40px;
+}
+
+#pic {
+  margin-left: 50%;
+  margin top: 50%;
+
 }
 
 p{
   font-family: 'Hind', sans-serif !important;
   font-size: 18px;
+  margin-left: 20%;
+  margin-right: 20%;
 }
