--- a/slide9.css
+++ b/slide9.css
@@ -26,16 +26,12 @@ h1, p{
 
 h1{
   font-family: 'Leckerli One', cursive;
-  font-size: 200px;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  font-size: 100px;
+  text-align: center;
+  margin: 50px ;
 }
 
-p{
+ul,li{
   font-family: 'Hind', sans-serif;
   font-size: 18px;
 }
