--- a/slide2.css
+++ b/slide2.css
@@ -25,7 +25,7 @@ h1, p{
 
 h1 {
   font-family: 'Leckerli One', cursive !important;
-  font-size: 100px !important;
+  font-size: 200px !important;
   text-align: center;
   margin: 50px;
   margin-top: 40px;
@@ -36,15 +36,16 @@ h1 {
   margin-top: 40px;
 }
 
-#pic {
-  margin-left: 50%;
-  margin top: 50%;
+.pic {
 
 }
 
 p{
   font-family: 'Hind', sans-serif !important;
-  font-size: 18px;
-  margin-left: 20%;
+  font-size: 26px;
+  text-align: center;
+  margin-top: 11% !important;
+  margin-left: 25%;
   margin-right: 20%;
+  width: 50%;
 }
