--- a/slide4.css
+++ b/slide4.css
@@ -8,22 +8,28 @@ h1, p{
 
 h1 {
   font-family: 'Leckerli One', cursive !important;
-  font-size: 100px;
+  font-size: 100px !important;
   text-align: center;
 }
 
 p{
-  font-family: 'Hind', sans-serif !important;
-  font-size: 18px;
+  font-family: 'Hind', sans-serif;
+  font-size: 26px;
+  text-align: center;
+  margin-top: 10% !important;
+  margin-left: 22% !important;
+  margin-right: 20% !important;
+  width: 55%
 }
 
 img{
   display: block;
   margin: auto;
+  margin-top: 10%;
 }
 .right {
   float: right;
-  left: 100%;
+  left: 80%;
   top: 50%;
   height: 0;
   width: 0;
@@ -32,7 +38,7 @@ img{
 }
 .left {
   float: left;
-  right: 100%;
+  right: 80%;
 	top: 50%;
 	height: 0;
 	width: 0;
