--- a/slide5.css
+++ b/slide5.css
@@ -4,7 +4,7 @@ body{
 
 .right {
   float: right;
-  left: 100%;
+  left: 80%;
   top: 50%;
   height: 0;
   width: 0;
@@ -13,9 +13,13 @@ body{
 }
 .left {
   float: left;
-  right: 100%;
+  right: 80%;
 	top: 50%;
 	height: 0;
 	width: 0;
 	position: fixed;
+}
+.id {
+
+  
 }
