--- a/slide2.css
+++ b/slide2.css
@@ -3,7 +3,7 @@ body{
 }
 .right {
   float: right;
-  left: 80%;
+  left: 90%;
   top: 50%;
   height: 0;
   width: 0;
@@ -12,7 +12,7 @@ body{
 }
 .left {
   float: left;
-  right: 80%;
+  right: 90%;
 	top: 50%;
 	height: 0;
 	width: 0;
@@ -20,12 +20,12 @@ body{
 }
 
 h1, p{
-  color: #fff4fd !important;
+  color: #292828 !important;
 }
 
 h1 {
   font-family: 'Leckerli One', cursive !important;
-  font-size: 200px !important;
+  font-size: 90px !important;
   text-align: center;
   margin: 50px;
   margin-top: 40px;
@@ -44,8 +44,7 @@ p{
   font-family: 'Hind', sans-serif !important;
   font-size: 26px;
   text-align: center;
-  margin-top: 11% !important;
-  margin-left: 25%;
+  margin-top: 14.8% !important;
+  margin-left: 20%;
   margin-right: 20%;
-  width: 50%;
 }
