--- a/slide3.css
+++ b/slide3.css
@@ -9,7 +9,7 @@ body{
 }
 .left {
   float: left;
-  right: 80%;
+  right: 90%;
 	top: 50%;
 	height: 0;
 	width: 0;
@@ -17,7 +17,7 @@ body{
 }
 .right {
   float: right;
-  left: 80%;
+  left: 90%;
   top: 50%;
   height: 0;
   width: 0;
@@ -26,12 +26,12 @@ body{
 }
 
 h1, p{
-  color: #fff4fd !important;
+    color: #292828 !important;
 }
 
 h1 {
   font-family: 'Leckerli One', cursive !important;
-  font-size: 100px !important;
+  font-size: 90px !important;
   text-align: center;
 }
 
