--- a/slide6.css
+++ b/slide6.css
@@ -4,7 +4,7 @@ body{
 
 .right {
   float: right;
-  left: 80%;
+  left: 90%;
   top: 50%;
   height: 0;
   width: 0;
@@ -13,7 +13,7 @@ body{
 }
 .left {
   float: left;
-  right: 80%;
+  right: 90%;
 	top: 50%;
 	height: 0;
 	width: 0;
@@ -21,7 +21,7 @@ body{
 }
 
 h1, h3, p, li{
-  color: #fff4fd !important;
+  color: #292828 !important;
 }
 
 h1 {
