--- a/slide6.css
+++ b/slide6.css
@@ -20,28 +20,36 @@ body{
 	position: fixed;
 }
 
+img{
+  padding-top: 40px;
+  padding-left: 150px;
+  margin: 20px;
+}
+
+
 h1, h3, p, li{
   color: #292828 !important;
+  text-align: center;
 }
 
 h1 {
-  font-family: 'Leckerli One', cursive;
+  font-family: 'Cardo';
   font-size: 100px;
   text-align: center;
   margin: 50px;
 }
 
 h3 {
-  font-family: 'Amaranth', sans-serif;
+  font-family: 'Cardo', sans-serif;
   font-size: 60px;
 }
 
 p{
-  font-family: 'Hind', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
 }
 
 li{
-  font-family: 'Hind', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
 }
