--- a/slide7.css
+++ b/slide7.css
@@ -9,7 +9,7 @@ img{
   padding-top: 30px;
 }
 h3 {
-  font-family: 'Amaranth', sans-serif ;
+  font-family: 'Cardo';
   font-size: 60px;
 }
 
@@ -21,11 +21,11 @@ h1, h3, p{
   color: #292828 !important;
 }
 p {
-  font-family: 'Hind', sans-serif ;
+  font-family: 'Josefin Sans';
   font-size: 18px;
 }
 h1 {
-  font-family: 'georgia', serif ;
+  font-family: 'Cardo';
   font-size: 100px;
 }
 .right {
