--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
   background-color: #c5b5e1 !important;
 }
 h1 {
-  font-family: 'georgia', serif;
+  font-family: 'Cardo';
   text-align: center;
   color: #292828 !important;
   margin-top: 20px;
