--- a/slide10.css
+++ b/slide10.css
@@ -75,3 +75,31 @@ h1, h2, h3, p {
 a {
   color: gray;
 }
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav_li{
+  float: left;
+}
+
+.nav_li a{
+  display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav_li a:hover:not(.active) {
+    background-color: #111;
+}
+
+#brand{
+  color: white;
+}
