--- a/slide2.css
+++ b/slide2.css
@@ -48,3 +48,31 @@ p{
   margin-left: 20%;
   margin-right: 20%;
 }
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav_li{
+  float: left;
+}
+
+.nav_li a{
+  display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav_li a:hover:not(.active) {
+    background-color: #111;
+}
+
+#brand{
+  color: white;
+}
