--- a/slide6.css
+++ b/slide6.css
@@ -53,3 +53,31 @@ li{
   font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
 }
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav_li{
+  float: left;
+}
+
+.nav_li a{
+  display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav_li a:hover:not(.active) {
+    background-color: #111;
+}
+
+#brand{
+  color: white;
+}
