--- a/slide9.css
+++ b/slide9.css
@@ -50,3 +50,31 @@ ul, li {
 
 .thumbnail {
 }
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav_li{
+  float: left;
+}
+
+.nav_li a{
+  display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav_li a:hover:not(.active) {
+    background-color: #111;
+}
+
+#brand{
+  color: white;
+}
