--- a/slide2.css
+++ b/slide2.css
@@ -54,23 +54,26 @@ p{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #4B3B40 !important;
 }
 
-.nav_li{
+.li_nav{
   float: left;
 }
 
-.nav_li a{
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
   display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  color: #818D92 !important;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.nav_li a:hover:not(.active) {
+.li_nav a:hover:not(.active) {
     background-color: #111;
+    color: #818D92;
 }
 
 #brand{
