--- a/slide3.css
+++ b/slide3.css
@@ -57,23 +57,26 @@ img {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #4B3B40;
 }
 
-.nav_li{
+.li_nav{
   float: left;
 }
 
-.nav_li a{
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
   display: block;
-    color: white;
+    color: #818D92;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-.nav_li a:hover:not(.active) {
+.li_nav a:hover:not(.active) {
     background-color: #111;
+    color: #818D92;
 }
 
 #brand{
