--- a/slide5.css
+++ b/slide5.css
@@ -24,6 +24,14 @@ body{
 
 }
 
+img{
+  display: block;
+  margin-left: 110px;
+  margin-top: 75px;
+  width: 80%;
+  height: 100%;
+}
+
 .nav{
   list-style-type: none;
     margin: 0;
