--- a/slide4.css
+++ b/slide4.css
@@ -7,13 +7,13 @@ h1, p{
 }
 
 h1 {
-  font-family: 'Leckerli One', cursive !important;
-  font-size: 100px !important;
+  font-family: 'Cardo' !important;
+  font-size: 95px !important;
   text-align: center;
 }
 
 p{
-  font-family: 'Hind', sans-serif;
+  font-family: 'Josefin Sans';
   font-size: 26px;
   text-align: center;
   margin-top: 10% !important;
@@ -43,4 +43,35 @@ img{
 	height: 0;
 	width: 0;
 	position: fixed;
+}
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4B3B40;
+}
+
+.li_nav{
+  float: left;
+}
+
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
+  display: block;
+    color: #818D92;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.li_nav a:hover:not(.active) {
+    background-color: #111;
+    color: #818D92;
+}
+
+#brand{
+  color: white;
 }
