--- a/slide9.css
+++ b/slide9.css
@@ -11,7 +11,6 @@ body {
   position: fixed;
 	margin-left: -26.8px;
 }
-
 .left {
   float: left;
   right: 90%;
@@ -27,7 +26,7 @@ h1, ul, li {
 
 h1 {
   font-family: 'Cardo';
-  font-size: 100px;
+  font-size: 95px;
   text-align: center;
   margin: 5%;
 }
@@ -44,9 +43,55 @@ ul, li {
   -webkit-transition: opacity .25s ease-in-out;
 }
 
-  .fade:hover {
+.fade:hover {
     opacity: 0.5;
   }
 
 .thumbnail {
+}
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4B3B40;
+}
+
+.li_nav{
+  float: left;
+}
+
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
+  display: block;
+    color: #818D92;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.li_nav a:hover:not(.active) {
+    background-color: #111;
+    color: #818D92;
+}
+
+#brand{
+  color: white;
+}
+
+#fullpage{
+  padding-top: 50px;
+  padding-right: 250px;
+  padding-bottom: 50px;
+  padding-left: 200px;
 }
