--- a/slide10.css
+++ b/slide10.css
@@ -4,7 +4,7 @@ body{
 
 .left {
   float: left;
-  right: 90%;
+  right:90%;
 	top: 50%;
 	height: 0;
 	width: 0;
@@ -13,7 +13,7 @@ body{
 
 h1 {
   font-family: 'Cardo';
-  font-size: 100px;
+  font-size: 95px;
   margin-top: 25px;
 }
 
@@ -30,7 +30,7 @@ h2 {
 
 p {
   font-family: 'Josefin Sans';
-  font-size: 19px;
+  font-size: 26px;
   margin-top: 80px;
   margin-left: 20px;
 }
@@ -74,4 +74,41 @@ h1, h2, h3, p {
 
 a {
   color: gray;
+}
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4B3B40;
+}
+
+.li_nav{
+  float: left;
+}
+
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
+  display: block;
+    color: #818D92;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.li_nav a:hover:not(.active) {
+    background-color: #111;
+    color: #818D92;
+}
+
+#brand{
+  color: white;
+}
+.fullpage{
+  padding-top: 50px;
+  padding-right: 250px;
+  padding-bottom: 50px;
+  padding-left: 200px;
 }
