--- a/slide2.css
+++ b/slide2.css
@@ -1,22 +1,53 @@
 body{
   background-color: #c5b5e1 !important;
 }
-.right {
-  float: right;
-  left: 90%;
-  top: 50%;
-  height: 0;
-  width: 0;
-  position: fixed;
-  margin-left: -26.8px;
-}
 .left {
   float: left;
   right: 90%;
 	top: 50%;
 	height: 0;
 	width: 0;
-	position: fixed;
+	position: fixed !important;
+}
+.right {
+  float: right;
+  left: 90%;
+  top: 50%;
+  height: 0;
+  width: 0;
+  position: fixed !important;
+	margin-left: -26.8px;
+}
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4B3B40;
+}
+
+.li_nav{
+  float: left;
+}
+
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
+  display: block;
+    color: #818D92;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.li_nav a:hover:not(.active) {
+    background-color: #111;
+    color: #818D92;
+}
+
+#brand{
+  color: white;
 }
 
 h1, p{
@@ -24,8 +55,8 @@ h1, p{
 }
 
 h1 {
-  font-family: 'Leckerli One', cursive !important;
-  font-size: 90px !important;
+  font-family: 'Cardo' !important;
+  font-size: 95px !important;
   text-align: center;
   margin: 50px;
   margin-top: 40px;
@@ -41,10 +72,9 @@ h1 {
 }
 
 p{
-  font-family: 'Hind', sans-serif !important;
+  font-family: 'Josefin Sans' !important;
   font-size: 26px;
   text-align: center;
-  margin-top: 14.8% !important;
   margin-left: 20%;
   margin-right: 20%;
 }
