--- a/slide7.css
+++ b/slide7.css
@@ -9,7 +9,7 @@ img{
   padding-top: 30px;
 }
 h3 {
-  font-family: 'Amaranth', sans-serif ;
+  font-family: 'Cardo' !important ;
   font-size: 60px;
 }
 
@@ -21,12 +21,14 @@ h1, h3, p{
   color: #292828 !important;
 }
 p {
-  font-family: 'Hind', sans-serif ;
-  font-size: 18px;
+  font-family: 'Josefin Sans' !important ;
+  font-size: 26px;
+  width: 75%;
+  margin-left: 12%;
 }
 h1 {
-  font-family: 'georgia', serif ;
-  font-size: 100px;
+  font-family: 'Cardo' !important ;
+  font-size: 95px;
 }
 .right {
   float: right;
@@ -44,4 +46,35 @@ h1 {
 	height: 0;
 	width: 0;
 	position: fixed;
+}
+
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4B3B40;
+}
+
+.li_nav{
+  float: left;
+}
+
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
+  display: block;
+    color: #818D92;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.li_nav a:hover:not(.active) {
+    background-color: #111;
+    color: #818D92;
+}
+
+#brand{
+  color: white;
 }
