--- a/style.css
+++ b/style.css
@@ -4,18 +4,53 @@
 	top: 50%;
 	height: 0;
 	width: 0;
-	position: fixed;
+	position: fixed !important;
+  margin-left: -26.8px;
 }
+
 body{
   background-color: #c5b5e1 !important;
 }
 h1 {
-  font-family: 'georgia', serif;
+  font-family: 'Cardo' !important;
   text-align: center;
   color: #292828 !important;
   margin-top: 20px;
   margin-bottom: 10px;
-  font-size: 100px;
+  font-size: 95px;
+}
+.sub {
+  margin-top: 20% !important;
+  font-size: 75px;
+}
 
+.nav{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #4B3B40;
+}
 
+.li_nav{
+  float: left;
+}
+
+.li_nav a{
+  font-family: 'Cardo';
+  font-size: 15px;
+  display: block;
+    color: #818D92;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.li_nav a:hover:not(.active) {
+    background-color: #111;
+    color: #818D92;
+}
+
+#brand{
+  color: white;
 }
