--- a/slide2.css
+++ b/slide2.css
@@ -56,12 +56,8 @@ h1, p{
 
 h1 {
   font-family: 'Cardo' !important;
-
   font-size: 95px !important;
-
-  font-size: 90px !important;
   text-align: center;
-  margin: 50px;
   margin-top: 40px;
 }
 
@@ -71,6 +67,10 @@ h1 {
 }
 
 .pic {
+  margin-top: 10% !important;
+  display: block;
+  width: 40% !important;
+  margin: auto !important;
 
 }
 
