--- a/slide3.css
+++ b/slide3.css
@@ -34,10 +34,7 @@ h1 {
   font-family: 'Cardo'!important;
   font-size: 95px !important;
   text-align: center !important;
-
-  font-family: 'Cardo' !important;
-  font-size: 90px !important;
-  text-align: center;
+  margin-bottom: 20% !important;
 }
 
 p {
