--- a/slide6.css
+++ b/slide6.css
@@ -67,7 +67,7 @@ p,li{
   font-family: 'Cardo';
   font-size: 15px;
   display: block;
-    color: #818D92;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
