--- a/slide2.css
+++ b/slide2.css
@@ -35,7 +35,7 @@ body{
   font-family: 'Cardo';
   font-size: 15px;
   display: block;
-    color: #818D92;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -57,8 +57,8 @@ h1, p{
 h1 {
   font-family: 'Cardo' !important;
   font-size: 95px !important;
-  text-align: center;
-  margin-top: 40px;
+  text-align: center !important;
+  margin-top: 5% !important;
 }
 
 #heading {
@@ -67,10 +67,9 @@ h1 {
 }
 
 .pic {
-  margin-top: 10% !important;
+  margin-top: 4% !important;
   display: block;
   width: 40% !important;
-  margin: auto !important;
 
 }
 
@@ -98,7 +97,7 @@ p{
   font-family: 'Cardo';
   font-size: 15px;
   display: block;
-  color: #818D92 !important;
+  color: white !important;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
