--- a/slide5.css
+++ b/slide5.css
@@ -27,7 +27,7 @@ body{
 img{
   display: block;
   margin-left: 110px;
-  margin-top: 75px;
+  margin-top: 110px;
   width: 80%;
   height: 100%;
 }
@@ -48,7 +48,7 @@ img{
   font-family: 'Cardo';
   font-size: 15px;
   display: block;
-    color: #818D92;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
