--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ h1 {
   font-family: 'Cardo';
   text-align: center;
   color: #292828 !important;
-  margin-top: 20px;
+  margin-top: 20px !important;
   margin-bottom: 10px;
   font-size: 95px;
 }
 .sub {
-  margin-top: 20% !important;
+  margin-top: 30% !important;
   font-size: 75px;
 }
 
@@ -39,7 +39,7 @@ h1 {
   font-family: 'Cardo';
   font-size: 15px;
   display: block;
-    color: #818D92;
+    color: white !important;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -82,4 +82,15 @@ h1 {
 
 #brand{
   color: white;
+}
+
+#logo {
+  display: block;
+  position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 500px;
+   height: 500px;
+   margin-top: -220px; /* Half the height */
+   margin-left: -250px;
 }
