--- a/slide6.css
+++ b/slide6.css
@@ -25,13 +25,6 @@ h1, h3, p, li, ul {
   color: #292828 !important;
 }
 
-/*h1, h3, p {*/
-  /*text-align: center;*/
-  /*margin-left: 100px;*/
-  /*margin-right: 100px;*/
-  /*margin-top: 20px;*/
-/*}*/
-
 #treatment,#causes,#symptoms {
   text-align: center;
   margin: auto;
@@ -42,6 +35,7 @@ h1 {
   font-size: 95px;
   text-align: center;
   margin: 35px;
+  margin-top: 6%;
 }
 
 h3 {
@@ -86,8 +80,9 @@ p, li{
 }
 
 .paragraph {
-  width: 75%;
-  margin-left: 12%;
+  width: 70%;
+  margin-left: 15%;
+
 }
 
 img {
