--- a/slide6.css
+++ b/slide6.css
@@ -25,30 +25,34 @@ h1, h3, p, li, ul {
   color: #292828 !important;
 }
 
-#treatment,#causes,#symptoms {
-  text-align: center;
-  margin: auto;
-}
-
 h1 {
   font-family: 'Cardo';
   font-size: 95px;
   text-align: center;
-  margin: 35px;
-  margin-top: 6%;
+  margin: 25px;
 }
 
 h3 {
   font-family: 'Cardo';
   font-size: 75px;
+  text-align: center;
+  margin: 2%;
 }
 
-p, li{
+p {
   font-family: 'Josefin Sans';
   font-size: 26px;
+  text-align: center;
 }
 
-.nav{
+.list {
+  font-family: 'Josefin Sans';
+  font-size: 26px;
+  text-align: center;
+  margin: 2%;
+}
+
+.nav {
   list-style-type: none;
     margin: 0;
     padding: 0;
@@ -56,11 +60,11 @@ p, li{
     background-color: #4B3B40;
 }
 
-.li_nav{
+.li_nav {
   float: left;
 }
 
-.li_nav a{
+.li_nav a {
   font-family: 'Cardo';
   font-size: 15px;
   display: block;
@@ -75,17 +79,19 @@ p, li{
     color: white;
 }
 
-#brand{
+#brand {
   color: white;
-}
-
-.paragraph {
-  width: 70%;
-  margin-left: 15%;
-
 }
 
 img {
   display: block;
   margin: auto;
+  height: 100vw;
+}
+
+#fullpage {
+  padding-top: 50px;
+  padding-right: 250px;
+  padding-bottom: 50px;
+  padding-left: 200px;
 }
