--- a/slide5.css
+++ b/slide5.css
@@ -19,17 +19,31 @@ body{
 	width: 0;
 	position: fixed;
 }
-.id {
-
-
+img{
+  width: 400px;
+  height: 200px;
 }
 
-img{
-  display: block;
-  margin-left: 110px;
-  margin-top: 110px;
-  width: 80%;
-  height: 100%;
+h1 {
+  font-family: 'Josefin Sans' !important;
+  text-align: center;
+  color: #292828 !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  font-size: 95px !important;
+  width: 80% !important;
+}
+
+h2 {
+  position: absolute;
+  font-family: 'Josefin Sans' !important;
+  top: 50%;
+  left: 50%;
+  font-size: 90px !important;
+  margin-top: 15% !important;
+
 }
 
 .nav{
@@ -56,7 +70,7 @@ img{
 
 .li_nav a:hover:not(.active) {
     background-color: #111;
-    color: #818D92;
+    color: white;
 }
 
 #brand{
