--- a/slide8.css
+++ b/slide8.css
@@ -20,9 +20,17 @@ body{
 	position: fixed !important;
 }
 
+h3 {
+  text-align: center;
+  font-family: 'Cardo' !important ;
+  font-family: 'Cardo';
+  font-size: 70px;
+}
+
 iframe{
   display: block;
   margin: 0 auto;
+  margin-top: 150px;
 }
 
 .nav{
