--- a/slide8.css
+++ b/slide8.css
@@ -19,18 +19,33 @@ body{
 	width: 0;
 	position: fixed !important;
 }
+h1 {
+  font-family: 'Cardo' !important;
+  font-size: 95px !important;
+  text-align: center;
+  margin-top: 5% !important;
+  margin-left: 20% !important;
+}
+h3 {
+  text-align: center;
+  font-family: 'Josefin Sans' !important;
+  font-size: 45px !important;
+  margin-left: 20% !important;
+
 
 h3 {
   text-align: center;
   font-family: 'Cardo' !important ;
   font-family: 'Cardo';
   font-size: 70px;
+
 }
 
 iframe{
   display: block;
   margin: 0 auto;
   margin-top: 150px;
+  margin-right: 12%;
 }
 
 .nav{
